# ros-opentelemetry

./: .clang-tidy  .dockerignore  .envrc  .gitignore  Justfile  LICENSE  README.md  pyproject.toml  rosdep-deps.txt  ruff.toml
docker/: docker-compose-example.yml  docker-compose.yml  example.Dockerfile
launch/: bringup_with_producer.launch.py  setup.launch.py
src/example/kuka_kr210_support/: CMakeLists.txt  package.xml
src/example/kuka_kr210_support/urdf/: kr210l150.xacro  kr210l150_macro.xacro
src/example/robot_control/: .setup_assistant  CMakeLists.txt  conanfile.txt  package.xml
src/example/robot_control/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  kuka_kr210.ros2_control.xacro  kuka_kr210.srdf  kuka_kr210.urdf.xacro  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
src/example/robot_control/include/robot_control/: robot_control_node.hpp
src/example/robot_control/launch/: bringup.launch.py  demo.launch.py
src/example/robot_control/src/: robot_control.cpp  robot_control_node.cpp
src/example/robot_control_interface/: CMakeLists.txt  package.xml
src/example/robot_control_interface/action/: SendRobotTargets.action
src/example/robot_control_interface/msg/: RobotTarget.msg
src/example/robot_task_producer/: package.xml  pyproject.toml  setup.cfg  setup.py
src/example/robot_task_producer/robot_task_producer/: producer.py
src/ros_opentelemetry_cpp/: CMakeLists.txt  package.xml
src/ros_opentelemetry_cpp/include/ros_opentelemetry_cpp/: ros_opentelemetry_cpp.hpp
src/ros_opentelemetry_cpp/src/: ros_opentelemetry_cpp.cpp
src/ros_opentelemetry_interfaces/: CMakeLists.txt  LICENSE  package.xml
src/ros_opentelemetry_interfaces/msg/: TraceMetadata.msg
src/ros_opentelemetry_py/ros_opentelemetry_py/: LICENSE  package.xml  pyproject.toml  setup.cfg  setup.py
src/ros_opentelemetry_py/ros_opentelemetry_py/ros_opentelemetry_py/: __init__.py
telemetry_services/telemetry/signoz/docker/: docker-compose.yaml  otel-collector-config.yaml
telemetry_services/telemetry/signoz/docker/bootstrap/: bootstrap_signoz_user.py
