<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kuka_kr210_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS-Industrial support for the KUKA KR 210 (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for KUKA KR 210 manipulators. This currently includes the L150 only.
    </p>
    <p><b>Specifications</b>:</p>
    <ul>
      <li>KR 210 L150 - Default</li>
    </ul>
    <p>
      Joint limits and maximum joint velocities are based on the information
      found in the online <a href="http://www.kuka-robotics.com/res/sps/e6c77545-9030-49b1-93f5-4d17c92173aa_Spez_KR_QUANTEC_extra_en.pdf">datasheet</a>.
      All urdfs are based on the default motion and joint velocity limits,
      unless noted otherwise.
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
    <p>
      <b>NB</b>: this package currently uses non-valid inertia parameters.
    </p>
  </description>
  <author>Shaun Edwards</author>
  <maintainer email="shaun.edwards@gmail.com">Shaun Edwards</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>industrial_robot_client</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>kuka_resources</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
