<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_control</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="sergey@szobov.ru">szobov</maintainer>

  <license>Apache 2.0</license>

  <author email="sergey@szobov.ru">szobov</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <!-- The next 2 packages are required for the gazebo simulation.
       We don't include them by default to prevent installing gazebo and all its dependencies. -->
  <!-- <exec_depend>joint_trajectory_controller</exec_depend> -->
  <!-- <exec_depend>gazebo_ros_control</exec_depend> -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>kuka_kr210_support</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_ros_warehouse</exec_depend>
  <exec_depend>moveit_setup_assistant</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rviz_common</exec_depend>
  <exec_depend>rviz_default_plugins</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp</depend>

  <depend>foxglove_bridge</depend>

  <depend>robot_control_interface</depend>

  <depend>ros_opentelemetry_cpp</depend>
  <depend>ros_opentelemetry_interfaces</depend>



  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
