[build-system]
requires = [
    "setuptools>=40.6.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "robot_task_producer"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [{name = "szobov", email = "sergey@szobov.ru"}]
dependencies = []
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
