<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_opentelemetry_py</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="sergey@szobov.ru">szobov</maintainer>

  <license>Apache 2.0</license>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <exec_depend>ros_opentelemetry_interfaces</exec_depend>

</package>
